[tool.poetry]
name = "langchain-ws"
version = "0.1.0"
description = ""
authors = ["fortisai <0xfortisai@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.3.7"
langchain-openai = "^0.2.8"
langchain-anthropic = "^0.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
